@@ -338,7 +338,7 @@
     return nil;
 }
 
-- (int)characterIndexForPointX:(float)x Y:(float)y
+- (NSInteger)characterIndexForPointX:(float)x Y:(float)y
 {
     NSObject <NSTextInput> *textInput = [self textInput];
 
@@ -346,7 +346,11 @@
         NSPoint point = NSMakePoint(x, y);
         point = [webView convertPoint:point toView:nil];
         point = [[webView window] convertBaseToScreen:point];
-        return [textInput characterIndexForPoint:point];
+        NSInteger index = [textInput characterIndexForPoint:point];
+        if (index == NSNotFound)
+            return -1;
+
+        return index;
     }
 
     return 0;
